--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -6,10 +6,14 @@
 }
 
 .keyboardlinear {
-  display: flex;
+  width: 100%;
+ display: flex;
   position: relative;
   width: 100%;
-  height: 100%;
+  aspect-ratio: min(var(--h2wratio), 1);
+  max-height: calc(var(--keyboardlinear-max-width) * var(--h2wratio)); 
+  /*max-width: var(--keyboardlinear-max-width); 
+  margin: 0 auto;  */
 }
 
 .piano-key {
