--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -1,15 +1,17 @@
 :root {
-  --h2wratio: 0.25;
+  --h2wratio: 0.25; /* Height to width ratio of the linear keyboard */
   --b2wKeyRatio: 0.7; /* Black to white key width ratio */
   --wKeysPer2Octaves: 14; /* 14 white keys fit into the full width */
   --bKeysPer2Octaves: calc(var(--wKeysPer2Octaves) /var(--b2wKeyRatio)); /* 20 black keys fit into the full width */
 }
 
 .keyboardlinear {
+  width: 100%;
+  max-width: var(--keyboardlinear-max-width);
+  aspect-ratio: calc(1 / var(--h2wratio));
+  max-height: 100%;
   display: flex;
   position: relative;
-  width: 100%;
-  height: 100%;
 }
 
 .piano-key {
@@ -37,6 +39,13 @@
   z-index: 1;
   color: var(--note-text-on-white);
   background-color: var(--key-white);
+}
+
+/* Media query for larger screens */
+@media (min-width: 450px) {
+  .piano-key {
+    font-size: calc(1vw + 3px) 
+  }
 }
 
 .piano-key.white.selected {
@@ -73,14 +82,4 @@
   border: 2px solid var(--root-note-highlight);
 }
 
-/* Media query for larger screens */
-@media (min-width: 500px) {
-  .keyboardlinear-container {
-    height: calc(500px * var(--h2wratio)); /* Set the height based on the max width */
-  }
-
-  .piano-key {
-    font-size: calc(500px / var(--bKeysPer2Octaves) * 0.4); /* Adjust font size based on black key width, allowing for max 2 characters */
-  }
-}
 
