--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -79,32 +79,31 @@ body {
 
 .settings-container {
   grid-area: settings;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  gap: 20px; /* vertical space between mode selector and presets selector*/
 }
 
 .chord-display-container {
   grid-area: chords;
-  /*width: 100%;
- /* min-width: var(--buttons-container-min-width);
-  max-width: var(--buttons-container-max-width);  */
- /* display: flex;
-  flex-direction: column;
+  display: flex;
   justify-content: center;
-  align-items: center;
- /* margin: 20px auto; /* Add vertical margin */
+  align-items: center; /* Center text vertically */
 }
 
 .notes-renderer-container {
   grid-area: staff;
-  /*width: 60%;*/
   
   min-width: var(--buttons-container-min-width);
   max-width: var(--buttons-container-max-width);  
   
   display: flex;
   flex-direction: column;
- /* justify-content: center;
-  align-items: center;
- /* margin: 20px auto; /* Add vertical margin */
+  justify-content: center; /* Center content vertically */
+  align-items: center; /* Center content horizontally */
+  margin: 20px auto; /* Add vertical margin */
 }
 
 .mode-selector-container > *,
