--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -1,14 +1,10 @@
 .presets-selector {
+    flex: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 100%; 
-    max-width: var(--buttons-container-max-width);
     box-sizing: border-box;
-    padding: 0 10px; /* Add some padding on the sides */
-    margin: 0 auto;
-    margin-top: 20px;
-    border: 1px solid var(--debug-border-color);  /* Add border to the mode selector container */
+    padding: 0 10px;
 }
 
 h3 {
