--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,7 +14,7 @@ body {
   --buttons-container-max-width: 300px;
   --buttons-container-min-width: 150px;
   --buttons-max-width: 200px;
-  --debug-border-color:  green;
+  --debug-border-color:  transparent;
 }
 
 .App {
