Simplify circular viz colors

--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -31,4 +31,6 @@
   --serenity-key-black-selected1: #D3B77E;
   --serenity-note-text-on-white: #333333;
   --serenity-note-text-on-black: #F5F5F5;
+
+  --serenity-polygon-stroke: #cccccc;
 }
