--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,7 +28,7 @@ body {
   width: 100vw;
   height: 100vh;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3fr 3fr 4fr 2fr;
+  grid-template-rows: 120px 3fr 4fr 2fr;
   /*default: portrait mode */
   grid-template-areas:
     "staff staff"
