--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,7 +3,7 @@
 
 body {
   margin: 0;
-  padding: 20px;
+  padding: 0px;
   box-sizing: border-box;
   background: linear-gradient(135deg, #F7F8FA, #EAEFF3);
 }
@@ -15,7 +15,7 @@ body {
   --buttons-container-max-width: 300px;
   --buttons-container-min-width: 150px;
   --buttons-max-width: 200px;
-  --debug-border-color:  grey;
+  --debug-border-color:  rgb(188, 188, 188);
 }
 
 .App {
@@ -25,16 +25,16 @@ body {
 
 .grid-container {
   display: grid;
-  height: 100vh; 
-  width: 100vw; 
+  width: 100vw;
+  height: 100vh;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 2fr 4fr 3fr 3fr;
+  grid-template-rows: 120px 3fr 4fr 2fr;
   /*default: portrait mode */
   grid-template-areas:
-    "linear linear"
+    "staff staff"
+    "settings settings"
     "circular circular"
-    "settings chords"
-    "settings staff";
+    "linear linear";
   /* grid-gap: 20px;*/
   overflow: hidden;
   > * {
@@ -46,10 +46,11 @@ body {
 @media (orientation: landscape) {
   .grid-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 2fr 4fr;
+    grid-template-rows:  2fr 2fr 2fr;
     grid-template-areas:
-      "linear linear settings chords"
-      "circular circular settings staff";
+      "circular circular staff staff"
+      "circular circular settings settings"
+      "linear linear settings settings";
   }
 }
 
@@ -65,78 +66,58 @@ body {
 
 .keyboardcircular-container {
   grid-area: circular;
-  width: 100%;
- /* max-width: var(--keyboardcircular-max-width);
-/*
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
+  gap: 0.5rem;
   position: relative;
+}
 
-  aspect-ratio: 1 / 1;
- 
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;*/
+#svg-container {
+  justify-self: start;
+  align-self: center;
 }
 
 .settings-container {
   grid-area: settings;
-  height: 100%;
   display: flex;
-  flex-direction: column;
+  gap: 1rem;
   overflow: auto;
-  gap: 20px; /* vertical space between mode selector and presets selector*/
+  padding: 1rem;
+  padding-right: 2rem;
 }
 
 .chord-display-container {
-  grid-area: chords;
-  display: flex;
-  justify-content: center;
-  align-items: center; /* Center text vertically */
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  display: grid;
+  gap: 0.5rem;
+  justify-items: end;
 }
 
 .notes-renderer-container {
   grid-area: staff;
-  
-  min-width: var(--buttons-container-min-width);
-  max-width: var(--buttons-container-max-width);  
-  
+  height: 120px !important;
+  /*min-width: 700px;*/
+  min-width: 100%;
+  max-width: 100%;  
+  border-bottom: 1px solid rgb(188, 188, 188);
   display: flex;
   flex-direction: column;
   justify-content: center; /* Center content vertically */
   align-items: center; /* Center content horizontally */
-  margin: 20px auto; /* Add vertical margin */
+  margin: 0px auto; /* Add vertical margin */
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.mode-selector-container > *,
-.presets-selector > *,
+.btn, .btn-outline-secondary {
+  max-height: 45px !important;
+  border-radius: 4px !important;
+}
+
 .chord-display-container > *,
 .notes-renderer-container > * {
   width: 100%;
-  /*min-width: var(--buttons-container-min-width);
-  max-width: var(--buttons-container-max-width);  */
-}
-
-.chord-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 5px;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-.interval-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
-    margin-bottom: 10px;
-    width: 100%;
-}
-
-.keyboardlinear-container,
-.keyboardcircular-container,
-.settings-container,
-.chord-display-container,
-.notes-renderer-container {
-  height: 100%;
- /* overflow: auto;*/
 }
