--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -6,7 +6,8 @@
   height: 100%;
   margin-left: 0;
   padding: 5px;
-  transform: translateX(10px);
+  justify-self: start;
+  align-self: center;
 }
 
 /* Top Bar */
