--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -46,7 +46,7 @@ body {
 @media (orientation: landscape) {
   .grid-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows:  2fr 2fr 2fr;
+    grid-template-rows: min-content 1fr 1fr;
     grid-template-areas:
       "circular circular staff staff"
       "circular circular settings settings"
@@ -68,10 +68,10 @@ body {
   grid-area: circular;
   display: grid;
   grid-template-areas:
-    "topbar   topbar"
+    "topbar topbar"
     "circular-keyboard sidebar";
   grid-template-columns: 1fr 100px;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: min-content 1fr;  /* Let topbar determine its height */
   position: relative;
   padding: 1rem;
 }
@@ -85,17 +85,6 @@ body {
   justify-content: flex-end;
   text-align: right;
   max-width: 120px;
-}
-
-.svg-container {
-  grid-area: circular-keyboard;
-  justify-self: center;
-  align-self: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
 .settings-container {
