--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,6 +27,9 @@ body {
   display: grid;
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
+  max-height: 100vh;
+  box-sizing: border-box;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 120px 3fr 4fr 2fr;
   /*default: portrait mode */
@@ -46,7 +49,7 @@ body {
 @media (orientation: landscape) {
   .grid-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows:  2fr 2fr 2fr;
+    grid-template-rows: min-content 1fr 1fr;
     grid-template-areas:
       "circular circular staff staff"
       "circular circular settings settings"
@@ -68,16 +71,12 @@ body {
   grid-area: circular;
   display: grid;
   grid-template-areas:
-    "topbar   topbar"
+    "topbar topbar"
     "circular-keyboard sidebar";
   grid-template-columns: 1fr 100px;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: min-content 1fr;  /* Let topbar determine its height */
   position: relative;
   padding: 1rem;
-}
-
-#keyboardpieslice-topbar {
-  grid-area: topbar;
 }
 
 .chord-display-container {
@@ -89,17 +88,6 @@ body {
   justify-content: flex-end;
   text-align: right;
   max-width: 120px;
-}
-
-.svg-container {
-  grid-area: circular-keyboard;
-  justify-self: center;
-  align-self: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
 }
 
 .settings-container {
@@ -116,18 +104,15 @@ body {
   word-wrap: break-word;
 }
 
-.notes-renderer-container {
+.staff-container {
   grid-area: staff;
   height: 120px !important;
-  /*min-width: 700px;*/
-  min-width: 100%;
-  max-width: 100%;  
-  border-bottom: 1px solid rgb(188, 188, 188);
+  width: 100%;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Center content vertically */
-  align-items: center; /* Center content horizontally */
-  margin: 0px auto; /* Add vertical margin */
+  justify-content: center;
+  align-items: center;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -138,6 +123,6 @@ body {
 }
 
 .chord-display-container > *,
-.notes-renderer-container > * {
+.staff-container > * {
   width: 100%;
 }
