--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -37,6 +37,9 @@
 
 .inversion-controls {
     margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .inversion-buttons {
@@ -66,11 +69,4 @@
 
 .row > div > button {
     flex: 1;
-}
-
-/* Remove old grid classes */
-.preset-grid,
-.preset-grid.chord,
-.preset-grid.interval {
-    display: none;
 }
