--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -96,7 +96,7 @@ body {
   grid-area: settings;
   display: flex;
   gap: 1rem;
-  overflow: auto;
+  overflow: hidden;
   padding: 1rem;
   padding-right: 2rem;
 }
