--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -99,6 +99,9 @@ body {
   overflow: hidden;
   padding: 1rem;
   padding-right: 2rem;
+  height: 100%;
+  min-height: 0;
+  box-sizing: border-box;
 }
 
 .chord-display-container > * {
