--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,8 +24,10 @@ body {
 .grid-container {
   display: grid;
   box-sizing: border-box;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  min-width: 100vw;
   padding: 0.5rem;
 
   /* Grid Container */
