--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,8 +10,6 @@ body {
 
 :root {
   --keyboardlinear-max-width: 500px;
-  --keyboardcircular-max-width: 300px;
-  --keyboardcircular-max-height: 200px;
   --buttons-container-max-width: 300px;
   --buttons-container-min-width: 150px;
   --buttons-max-width: 200px;
@@ -25,13 +23,14 @@ body {
 
 .grid-container {
   display: grid;
+  box-sizing: border-box;
   width: 100vw;
   height: 100vh;
-  max-width: 100%;
-  max-height: 100vh;
-  box-sizing: border-box;
+  padding: 0.5rem;
+
+  /* Grid Container */
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 120px 3fr 4fr 2fr;
+  grid-template-rows: 120px 3fr 3fr 2fr;
   /*default: portrait mode */
   grid-template-areas:
     "staff staff"
@@ -40,10 +39,6 @@ body {
     "linear linear";
   gap: 0.25rem;
   overflow: hidden;
-  > * {
-    min-height: 0; /* Important for Firefox */
- /*   overflow: auto; /* Allow scrolling if content is too large */
-  }
 }
 
 @media (orientation: landscape) {
