--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -1,24 +1,19 @@
-.presets-selector > * {
-    width: 100%;
-}
-
 .presets-selector {
-    flex: 1;
-    max-width: 100%;
     display: flex;
+    min-height: 0;
+    max-width: 100%;
+
+    flex: 1;
     flex-direction: column;
-    height: 100%;
+
     overflow-y: auto;
-    padding: 0 5px;
-    margin: 0 auto;
 }
 
 .preset-buttons-container {
     width: 100%;
-    overflow: hidden;
     flex: 1;
     min-height: 0;
-    overflow-y: auto;
+    overflow: hidden;
 }
 
 .preset-buttons-grid {
@@ -45,10 +40,7 @@
 }
 
 .inversion-controls {
-    margin-top: 0rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    margin-top: 0.5rem;
     flex-shrink: 0;
 }
 
