--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -31,20 +31,26 @@
 /*color schemes (common to both)*/
 .preset-button,
 .inversion-button {
-    background: var(--serenity-softgrey);    
-    border: 1px solid var(--serenity-border-color);
-    cursor: pointer;
+   /*background-color: #e0e0e0;
+color: #333333;
+border: 1px solid #cccccc;*/
+background-color: #e0e0e0;
+color: #333333;
+border: 1px solid #cccccc;
 }
 
 .preset-button:hover,
 .inversion-button:hover {
-    background: #eee;
+    background: #d6d6d6; /*#eee;*/
 }
 
 .preset-button.selected,
 .inversion-button.selected {
-    background: var(--serenity-darkgrey);
-    color: white;
+    background-color: #66b3ff;
+    color: #ffffff;
+    border: 1px solid #3a8dcc;
+    /*background: var(--serenity-darkgrey);
+    color: white;*/
 }
 
 /*formatting for the preset buttons*/
@@ -60,6 +66,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     border-radius: 4px;
+    
 } 
 
 /*formatting for the inversion buttons*/
