--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -5,7 +5,7 @@
     flex: 1;
     flex-direction: column;
     width: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .preset-buttons-grid {
@@ -23,20 +23,20 @@
 
 .inversion-buttons {
     display: flex;
-    gap: 0.5rem;
     justify-content: center;
-    margin-top: 0.25rem;
-}
+    gap: 0.5rem;
+    margin-top: 0rem;
+    min-height: 2.5rem;
+  }
 
 /*color schemes (common to both)*/
 .preset-button,
 .inversion-button {
-   /*background-color: #e0e0e0;
-color: #333333;
-border: 1px solid #cccccc;*/
-background-color: #e0e0e0;
-color: #333333;
-border: 1px solid #cccccc;
+    background-color: #e0e0e0;
+    color: #333333;
+    border: 1px solid #cccccc;
+    font-weight: 500;
+    font-size: 1.2rem;
 }
 
 .preset-button:hover,
@@ -46,11 +46,9 @@ border: 1px solid #cccccc;
 
 .preset-button.selected,
 .inversion-button.selected {
-    background-color: #66b3ff;
+    background-color: #598abb;
     color: #ffffff;
-    border: 1px solid #3a8dcc;
-    /*background: var(--serenity-darkgrey);
-    color: white;*/
+    border: 1px solid #3a8dcc;   
 }
 
 /*formatting for the preset buttons*/
@@ -65,7 +63,7 @@ border: 1px solid #cccccc;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    border-radius: 4px;
+    border-radius: 8px;
     
 } 
 
@@ -73,7 +71,7 @@ border: 1px solid #cccccc;
 .inversion-button {
     width: 2.5rem;
     height: 2.5rem;
-    border-radius: 50%;  /* Makes it circular */
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
