cleanup CSS classes

--- a/src/styles/ModeSelector.css
+++ b/src/styles/ModeSelector.css
@@ -36,12 +36,9 @@
   flex-shrink: 0;    /* Prevent title from shrinking */
 }
 
-.mode-selector-container > * {
-  width: 100%;
-} 
 
 
-.mode-buttons {
+.mode-button-container {
   width: 100%;
   display: flex;          
   flex-direction: column; 
